@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext: "dam"
 #
-# Auto generated 29-09-2007 00:34
+# Auto generated 29-09-2007 00:35
 #
 # Manual updates:
 # Only the data in the array - anything else is removed by next write.
@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'The Digital Asset Management (DAM) is simply a tool for organizing digital media assets for storage and retrieval. Metadata can be used to search and organize image, text, audio, video (...) files.',
 	'category' => 'module',
 	'shy' => 0,
-	'version' => '1.0.10',
+	'version' => '1.0.11',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
@@ -45,7 +45,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => 'a:208:{s:9:"ChangeLog";s:4:"c62e";s:20:"class.ext_update.php";s:4:"32ed";s:29:"class.tx_dam_browse_media.php";s:4:"fc2d";s:20:"class.tx_dam_cm1.php";s:4:"1711";s:26:"class.tx_dam_show_item.php";s:4:"b985";s:33:"class.tx_dam_tce_filetracking.php";s:4:"907e";s:36:"class.tx_dam_tce_languagehotlist.php";s:4:"446d";s:28:"class.tx_dam_tce_process.php";s:4:"997c";s:10:"close.html";s:4:"a235";s:21:"ext_conf_template.txt";s:4:"fcfe";s:12:"ext_icon.gif";s:4:"999b";s:17:"ext_localconf.php";s:4:"df4e";s:15:"ext_php_api.dat";s:4:"af9d";s:14:"ext_tables.php";s:4:"9301";s:14:"ext_tables.sql";s:4:"caa5";s:15:"icon_tx_dam.gif";s:4:"999b";s:19:"icon_tx_dam_cat.gif";s:4:"2596";s:24:"icon_tx_dam_lightbox.gif";s:4:"3433";s:25:"icon_tx_dam_selection.gif";s:4:"3433";s:21:"locallang_csh_dam.xml";s:4:"47ab";s:16:"locallang_db.xml";s:4:"2527";s:15:"modules_dam.gif";s:4:"06f8";s:7:"tca.php";s:4:"7b5f";s:19:"tca_media_field.php";s:4:"e231";s:18:"mod_file/clear.gif";s:4:"cc11";s:17:"mod_file/conf.php";s:4:"ff84";s:18:"mod_file/index.php";s:4:"c2ee";s:22:"mod_file/locallang.xml";s:4:"0bd0";s:26:"mod_file/locallang_mod.xml";s:4:"0d91";s:23:"mod_file/moduleicon.gif";s:4:"1d11";s:44:"modfunc_list_list/class.tx_dam_list_list.php";s:4:"9fe0";s:31:"modfunc_list_list/locallang.xml";s:4:"edbf";s:29:"compat/class.browse_links.php";s:4:"287c";s:30:"compat/class.ux_SC_alt_doc.php";s:4:"3c8c";s:35:"compat/class.ux_SC_browse_links.php";s:4:"3c26";s:32:"compat/class.ux_SC_show_item.php";s:4:"d898";s:38:"compat/class.ux_alt_menu_functions.php";s:4:"9b74";s:34:"compat/class.ux_t3lib_tceforms.php";s:4:"90ad";s:28:"compat/class.ux_template.php";s:4:"a09d";s:23:"compat/str_ireplace.php";s:4:"4b36";s:18:"compat/stripos.php";s:4:"bdce";s:24:"mod_treebrowser/conf.php";s:4:"7768";s:25:"mod_treebrowser/index.php";s:4:"280c";s:33:"mod_treebrowser/locallang_mod.php";s:4:"0c52";s:30:"mod_treebrowser/moduleicon.gif";s:4:"adc5";s:40:"treelib/class.tx_dam_treelib_browser.php";s:4:"3164";s:41:"treelib/class.tx_dam_treelib_tceforms.php";s:4:"aa82";s:44:"modfunc_file_list/class.tx_dam_file_list.php";s:4:"71c3";s:31:"modfunc_file_list/locallang.xml";s:4:"f068";s:46:"modfunc_list_batch/class.tx_dam_list_batch.php";s:4:"d545";s:32:"modfunc_list_batch/locallang.xml";s:4:"aaed";s:39:"mod_cmd/class.tx_dam_cmd_filedelete.php";s:4:"0cc6";s:39:"mod_cmd/class.tx_dam_cmd_filerename.php";s:4:"d66d";s:40:"mod_cmd/class.tx_dam_cmd_filereplace.php";s:4:"ede0";s:41:"mod_cmd/class.tx_dam_cmd_folderdelete.php";s:4:"4441";s:38:"mod_cmd/class.tx_dam_cmd_foldernew.php";s:4:"0f48";s:41:"mod_cmd/class.tx_dam_cmd_folderrename.php";s:4:"c92a";s:36:"mod_cmd/class.tx_dam_cmd_nothing.php";s:4:"a507";s:16:"mod_cmd/conf.php";s:4:"bf3e";s:17:"mod_cmd/index.php";s:4:"bf94";s:21:"mod_cmd/locallang.xml";s:4:"7ff6";s:25:"mod_cmd/locallang_mod.xml";s:4:"0a91";s:22:"mod_cmd/moduleicon.gif";s:4:"adc5";s:17:"mod_main/conf.php";s:4:"683e";s:26:"mod_main/locallang_mod.xml";s:4:"3161";s:23:"mod_main/moduleicon.gif";s:4:"3833";s:28:"mod_main/tx_dam_navframe.php";s:4:"b50e";s:20:"lib/class.tx_dam.php";s:4:"f7a0";s:31:"lib/class.tx_dam_actionbase.php";s:4:"4b1c";s:31:"lib/class.tx_dam_actioncall.php";s:4:"bc03";s:33:"lib/class.tx_dam_batchprocess.php";s:4:"ed1d";s:32:"lib/class.tx_dam_browsetrees.php";s:4:"a4bb";s:23:"lib/class.tx_dam_db.php";s:4:"6811";s:32:"lib/class.tx_dam_filebrowser.php";s:4:"98a3";s:28:"lib/class.tx_dam_guifunc.php";s:4:"548b";s:34:"lib/class.tx_dam_guirenderlist.php";s:4:"2ede";s:29:"lib/class.tx_dam_indexing.php";s:4:"e5bf";s:34:"lib/class.tx_dam_indexrulebase.php";s:4:"bb5e";s:32:"lib/class.tx_dam_iterator_db.php";s:4:"b8ef";s:41:"lib/class.tx_dam_iterator_db_lang_ovl.php";s:4:"c009";s:33:"lib/class.tx_dam_iterator_dir.php";s:4:"29ee";s:29:"lib/class.tx_dam_listbase.php";s:4:"277e";s:30:"lib/class.tx_dam_listfiles.php";s:4:"1cff";s:32:"lib/class.tx_dam_listpointer.php";s:4:"7f67";s:32:"lib/class.tx_dam_listrecords.php";s:4:"3785";s:26:"lib/class.tx_dam_media.php";s:4:"bf89";s:29:"lib/class.tx_dam_navframe.php";s:4:"c442";s:38:"lib/class.tx_dam_previewerprocbase.php";s:4:"44ef";s:29:"lib/class.tx_dam_querygen.php";s:4:"dcae";s:27:"lib/class.tx_dam_scbase.php";s:4:"5e8c";s:30:"lib/class.tx_dam_selection.php";s:4:"1254";s:35:"lib/class.tx_dam_selectionquery.php";s:4:"d8b1";s:32:"lib/class.tx_dam_selprocbase.php";s:4:"b11e";s:31:"lib/class.tx_dam_selstorage.php";s:4:"9c21";s:32:"lib/class.tx_dam_simpleforms.php";s:4:"bf50";s:27:"lib/class.tx_dam_svlist.php";s:4:"b68f";s:30:"lib/class.tx_dam_sysfolder.php";s:4:"41a1";s:29:"lib/class.tx_dam_tce_file.php";s:4:"db31";s:28:"lib/class.tx_dam_tcefunc.php";s:4:"1602";s:25:"lib/class.tx_dam_tsfe.php";s:4:"1c88";s:17:"lib/locallang.xml";s:4:"446b";s:20:"lib/tx_dam_types.php";s:4:"861a";s:48:"modfunc_list_thumbs/class.tx_dam_list_thumbs.php";s:4:"370f";s:33:"modfunc_list_thumbs/locallang.xml";s:4:"6d5d";s:32:"i/_icon_webfolders_protected.gif";s:4:"cd4a";s:21:"i/add_to_lightbox.gif";s:4:"8d0d";s:21:"i/button_deselect.gif";s:4:"7903";s:19:"i/button_remove.gif";s:4:"0414";s:21:"i/button_reselect.gif";s:4:"f06a";s:9:"i/cat.gif";s:4:"0e9a";s:10:"i/cat2.gif";s:4:"89a7";s:16:"i/cat2folder.gif";s:4:"b7f4";s:10:"i/cat3.gif";s:4:"2ed1";s:16:"i/cat3folder.gif";s:4:"2797";s:15:"i/catfolder.gif";s:4:"a16b";s:12:"i/equals.gif";s:4:"fcb9";s:15:"i/equals_16.gif";s:4:"54a3";s:13:"i/error_h.gif";s:4:"9388";s:17:"i/goback_flat.gif";s:4:"3b78";s:20:"i/indexrunfolder.gif";s:4:"558a";s:18:"i/indexruntype.gif";s:4:"47b5";s:23:"i/media-application.png";s:4:"b316";s:17:"i/media-audio.png";s:4:"ec87";s:22:"i/media-collection.png";s:4:"3089";s:19:"i/media-dataset.png";s:4:"05eb";s:16:"i/media-font.png";s:4:"5651";s:17:"i/media-image.png";s:4:"5342";s:23:"i/media-interactive.png";s:4:"3b67";s:17:"i/media-model.png";s:4:"b6e0";s:19:"i/media-service.png";s:4:"13cd";s:20:"i/media-software.png";s:4:"3d09";s:16:"i/media-text.png";s:4:"c844";s:21:"i/media-undefined.png";s:4:"bc98";s:17:"i/media-video.png";s:4:"cc04";s:17:"i/mediafolder.gif";s:4:"f898";s:15:"i/mediatype.gif";s:4:"8bd0";s:16:"i/mimefolder.gif";s:4:"16bd";s:14:"i/mimetype.gif";s:4:"379f";s:11:"i/minus.gif";s:4:"5f98";s:14:"i/minus_16.gif";s:4:"cfa1";s:19:"i/new_webfolder.gif";s:4:"0ac3";s:10:"i/plus.gif";s:4:"80dd";s:13:"i/plus_16.gif";s:4:"ab3d";s:17:"i/rename_file.gif";s:4:"0a01";s:18:"i/replace_file.gif";s:4:"ae41";s:18:"i/statusfolder.gif";s:4:"efdc";s:16:"i/statustype.gif";s:4:"6fd4";s:12:"i/18/doc.gif";s:4:"0975";s:12:"i/18/dot.gif";s:4:"0975";s:13:"i/18/html.gif";s:4:"f6b2";s:26:"i/18/mtype_application.gif";s:4:"0185";s:20:"i/18/mtype_audio.gif";s:4:"279b";s:25:"i/18/mtype_collection.gif";s:4:"a48d";s:22:"i/18/mtype_dataset.gif";s:4:"4285";s:19:"i/18/mtype_font.gif";s:4:"7afa";s:20:"i/18/mtype_image.gif";s:4:"1d47";s:26:"i/18/mtype_interactive.gif";s:4:"be4d";s:20:"i/18/mtype_model.gif";s:4:"b052";s:22:"i/18/mtype_service.gif";s:4:"0235";s:23:"i/18/mtype_software.gif";s:4:"3e9f";s:19:"i/18/mtype_text.gif";s:4:"6c86";s:24:"i/18/mtype_undefined.gif";s:4:"bf41";s:20:"i/18/mtype_video.gif";s:4:"f848";s:12:"i/18/pdf.gif";s:4:"49a4";s:30:"tests/tx_dam_base_testcase.php";s:4:"190d";s:32:"tests/tx_dam_config_testcase.php";s:4:"e52b";s:28:"tests/tx_dam_db_testcase.php";s:4:"06cc";s:31:"tests/tx_dam_media_testcase.php";s:4:"a8bb";s:34:"tests/fixtures/example-content.txt";s:4:"4e23";s:18:"mod_list/clear.gif";s:4:"cc11";s:17:"mod_list/conf.php";s:4:"ed29";s:18:"mod_list/index.php";s:4:"3c13";s:22:"mod_list/locallang.xml";s:4:"bcbc";s:26:"mod_list/locallang_mod.xml";s:4:"2bc7";s:23:"mod_list/moduleicon.gif";s:4:"adc5";s:62:"modfunc_tools_filerelcheck/class.tx_dam_tools_filerelcheck.php";s:4:"6e16";s:40:"modfunc_tools_filerelcheck/locallang.xml";s:4:"b293";s:19:"mod_tools/clear.gif";s:4:"cc11";s:18:"mod_tools/conf.php";s:4:"114c";s:19:"mod_tools/index.php";s:4:"e1c9";s:23:"mod_tools/locallang.xml";s:4:"74f0";s:27:"mod_tools/locallang_mod.xml";s:4:"1f74";s:24:"mod_tools/moduleicon.gif";s:4:"cce3";s:29:"mod_tools/tx_dam_navframe.php";s:4:"e492";s:50:"modfunc_list_editsel/class.tx_dam_list_editsel.php";s:4:"3b0b";s:34:"modfunc_list_editsel/locallang.xml";s:4:"fac3";s:60:"modfunc_tools_indexupdate/class.tx_dam_tools_indexupdate.php";s:4:"1866";s:39:"modfunc_tools_indexupdate/locallang.xml";s:4:"f877";s:39:"components/class.tx_dam_actionsFile.php";s:4:"a719";s:41:"components/class.tx_dam_actionsFolder.php";s:4:"2aed";s:41:"components/class.tx_dam_actionsRecord.php";s:4:"9021";s:47:"components/class.tx_dam_dbTriggerMediaTypes.php";s:4:"c20e";s:42:"components/class.tx_dam_previewerImage.php";s:4:"c0c2";s:40:"components/class.tx_dam_previewerMP3.php";s:4:"641a";s:45:"components/class.tx_dam_selectionCategory.php";s:4:"c92f";s:43:"components/class.tx_dam_selectionFolder.php";s:4:"cbd6";s:45:"components/class.tx_dam_selectionIndexRun.php";s:4:"662e";s:44:"components/class.tx_dam_selectionMeTypes.php";s:4:"ce31";s:43:"components/class.tx_dam_selectionStatus.php";s:4:"dcbd";s:49:"components/class.tx_dam_selectionStringSearch.php";s:4:"25f2";s:16:"res/emff_inx.swf";s:4:"83f7";s:19:"res/emff_kubrik.swf";s:4:"cb27";s:17:"res/emff_lila.swf";s:4:"f05b";s:16:"res/emff_old.swf";s:4:"360e";s:14:"doc/manual.sxw";s:4:"045f";s:48:"modfunc_file_upload/class.tx_dam_file_upload.php";s:4:"d38a";s:33:"modfunc_file_upload/locallang.xml";s:4:"4bcf";s:37:"modfunc_file_upload/upload_status.php";s:4:"0235";}',
+	'_md5_values_when_last_written' => 'a:208:{s:9:"ChangeLog";s:4:"6e30";s:20:"class.ext_update.php";s:4:"32ed";s:29:"class.tx_dam_browse_media.php";s:4:"fc2d";s:20:"class.tx_dam_cm1.php";s:4:"1711";s:26:"class.tx_dam_show_item.php";s:4:"b985";s:33:"class.tx_dam_tce_filetracking.php";s:4:"907e";s:36:"class.tx_dam_tce_languagehotlist.php";s:4:"446d";s:28:"class.tx_dam_tce_process.php";s:4:"997c";s:10:"close.html";s:4:"a235";s:21:"ext_conf_template.txt";s:4:"fcfe";s:12:"ext_icon.gif";s:4:"999b";s:17:"ext_localconf.php";s:4:"df4e";s:15:"ext_php_api.dat";s:4:"af9d";s:14:"ext_tables.php";s:4:"9301";s:14:"ext_tables.sql";s:4:"caa5";s:15:"icon_tx_dam.gif";s:4:"999b";s:19:"icon_tx_dam_cat.gif";s:4:"2596";s:24:"icon_tx_dam_lightbox.gif";s:4:"3433";s:25:"icon_tx_dam_selection.gif";s:4:"3433";s:21:"locallang_csh_dam.xml";s:4:"47ab";s:16:"locallang_db.xml";s:4:"2527";s:15:"modules_dam.gif";s:4:"06f8";s:7:"tca.php";s:4:"7b5f";s:19:"tca_media_field.php";s:4:"e231";s:18:"mod_file/clear.gif";s:4:"cc11";s:17:"mod_file/conf.php";s:4:"ff84";s:18:"mod_file/index.php";s:4:"c2ee";s:22:"mod_file/locallang.xml";s:4:"0bd0";s:26:"mod_file/locallang_mod.xml";s:4:"0d91";s:23:"mod_file/moduleicon.gif";s:4:"1d11";s:44:"modfunc_list_list/class.tx_dam_list_list.php";s:4:"9fe0";s:31:"modfunc_list_list/locallang.xml";s:4:"edbf";s:29:"compat/class.browse_links.php";s:4:"287c";s:30:"compat/class.ux_SC_alt_doc.php";s:4:"3c8c";s:35:"compat/class.ux_SC_browse_links.php";s:4:"3c26";s:32:"compat/class.ux_SC_show_item.php";s:4:"d898";s:38:"compat/class.ux_alt_menu_functions.php";s:4:"9b74";s:34:"compat/class.ux_t3lib_tceforms.php";s:4:"90ad";s:28:"compat/class.ux_template.php";s:4:"a09d";s:23:"compat/str_ireplace.php";s:4:"4b36";s:18:"compat/stripos.php";s:4:"bdce";s:24:"mod_treebrowser/conf.php";s:4:"7768";s:25:"mod_treebrowser/index.php";s:4:"280c";s:33:"mod_treebrowser/locallang_mod.php";s:4:"0c52";s:30:"mod_treebrowser/moduleicon.gif";s:4:"adc5";s:40:"treelib/class.tx_dam_treelib_browser.php";s:4:"3164";s:41:"treelib/class.tx_dam_treelib_tceforms.php";s:4:"aa82";s:44:"modfunc_file_list/class.tx_dam_file_list.php";s:4:"71c3";s:31:"modfunc_file_list/locallang.xml";s:4:"f068";s:46:"modfunc_list_batch/class.tx_dam_list_batch.php";s:4:"d545";s:32:"modfunc_list_batch/locallang.xml";s:4:"aaed";s:39:"mod_cmd/class.tx_dam_cmd_filedelete.php";s:4:"0cc6";s:39:"mod_cmd/class.tx_dam_cmd_filerename.php";s:4:"d66d";s:40:"mod_cmd/class.tx_dam_cmd_filereplace.php";s:4:"ede0";s:41:"mod_cmd/class.tx_dam_cmd_folderdelete.php";s:4:"4441";s:38:"mod_cmd/class.tx_dam_cmd_foldernew.php";s:4:"0f48";s:41:"mod_cmd/class.tx_dam_cmd_folderrename.php";s:4:"c92a";s:36:"mod_cmd/class.tx_dam_cmd_nothing.php";s:4:"a507";s:16:"mod_cmd/conf.php";s:4:"bf3e";s:17:"mod_cmd/index.php";s:4:"bf94";s:21:"mod_cmd/locallang.xml";s:4:"7ff6";s:25:"mod_cmd/locallang_mod.xml";s:4:"0a91";s:22:"mod_cmd/moduleicon.gif";s:4:"adc5";s:17:"mod_main/conf.php";s:4:"683e";s:26:"mod_main/locallang_mod.xml";s:4:"3161";s:23:"mod_main/moduleicon.gif";s:4:"3833";s:28:"mod_main/tx_dam_navframe.php";s:4:"b50e";s:20:"lib/class.tx_dam.php";s:4:"d9dc";s:31:"lib/class.tx_dam_actionbase.php";s:4:"4b1c";s:31:"lib/class.tx_dam_actioncall.php";s:4:"bc03";s:33:"lib/class.tx_dam_batchprocess.php";s:4:"ed1d";s:32:"lib/class.tx_dam_browsetrees.php";s:4:"a4bb";s:23:"lib/class.tx_dam_db.php";s:4:"6811";s:32:"lib/class.tx_dam_filebrowser.php";s:4:"98a3";s:28:"lib/class.tx_dam_guifunc.php";s:4:"548b";s:34:"lib/class.tx_dam_guirenderlist.php";s:4:"2ede";s:29:"lib/class.tx_dam_indexing.php";s:4:"e5bf";s:34:"lib/class.tx_dam_indexrulebase.php";s:4:"bb5e";s:32:"lib/class.tx_dam_iterator_db.php";s:4:"b8ef";s:41:"lib/class.tx_dam_iterator_db_lang_ovl.php";s:4:"c009";s:33:"lib/class.tx_dam_iterator_dir.php";s:4:"29ee";s:29:"lib/class.tx_dam_listbase.php";s:4:"277e";s:30:"lib/class.tx_dam_listfiles.php";s:4:"1cff";s:32:"lib/class.tx_dam_listpointer.php";s:4:"7f67";s:32:"lib/class.tx_dam_listrecords.php";s:4:"3785";s:26:"lib/class.tx_dam_media.php";s:4:"bf89";s:29:"lib/class.tx_dam_navframe.php";s:4:"c442";s:38:"lib/class.tx_dam_previewerprocbase.php";s:4:"44ef";s:29:"lib/class.tx_dam_querygen.php";s:4:"dcae";s:27:"lib/class.tx_dam_scbase.php";s:4:"5e8c";s:30:"lib/class.tx_dam_selection.php";s:4:"1254";s:35:"lib/class.tx_dam_selectionquery.php";s:4:"d8b1";s:32:"lib/class.tx_dam_selprocbase.php";s:4:"b11e";s:31:"lib/class.tx_dam_selstorage.php";s:4:"9c21";s:32:"lib/class.tx_dam_simpleforms.php";s:4:"bf50";s:27:"lib/class.tx_dam_svlist.php";s:4:"b68f";s:30:"lib/class.tx_dam_sysfolder.php";s:4:"41a1";s:29:"lib/class.tx_dam_tce_file.php";s:4:"db31";s:28:"lib/class.tx_dam_tcefunc.php";s:4:"1602";s:25:"lib/class.tx_dam_tsfe.php";s:4:"1c88";s:17:"lib/locallang.xml";s:4:"446b";s:20:"lib/tx_dam_types.php";s:4:"861a";s:48:"modfunc_list_thumbs/class.tx_dam_list_thumbs.php";s:4:"370f";s:33:"modfunc_list_thumbs/locallang.xml";s:4:"6d5d";s:32:"i/_icon_webfolders_protected.gif";s:4:"cd4a";s:21:"i/add_to_lightbox.gif";s:4:"8d0d";s:21:"i/button_deselect.gif";s:4:"7903";s:19:"i/button_remove.gif";s:4:"0414";s:21:"i/button_reselect.gif";s:4:"f06a";s:9:"i/cat.gif";s:4:"0e9a";s:10:"i/cat2.gif";s:4:"89a7";s:16:"i/cat2folder.gif";s:4:"b7f4";s:10:"i/cat3.gif";s:4:"2ed1";s:16:"i/cat3folder.gif";s:4:"2797";s:15:"i/catfolder.gif";s:4:"a16b";s:12:"i/equals.gif";s:4:"fcb9";s:15:"i/equals_16.gif";s:4:"54a3";s:13:"i/error_h.gif";s:4:"9388";s:17:"i/goback_flat.gif";s:4:"3b78";s:20:"i/indexrunfolder.gif";s:4:"558a";s:18:"i/indexruntype.gif";s:4:"47b5";s:23:"i/media-application.png";s:4:"b316";s:17:"i/media-audio.png";s:4:"ec87";s:22:"i/media-collection.png";s:4:"3089";s:19:"i/media-dataset.png";s:4:"05eb";s:16:"i/media-font.png";s:4:"5651";s:17:"i/media-image.png";s:4:"5342";s:23:"i/media-interactive.png";s:4:"3b67";s:17:"i/media-model.png";s:4:"b6e0";s:19:"i/media-service.png";s:4:"13cd";s:20:"i/media-software.png";s:4:"3d09";s:16:"i/media-text.png";s:4:"c844";s:21:"i/media-undefined.png";s:4:"bc98";s:17:"i/media-video.png";s:4:"cc04";s:17:"i/mediafolder.gif";s:4:"f898";s:15:"i/mediatype.gif";s:4:"8bd0";s:16:"i/mimefolder.gif";s:4:"16bd";s:14:"i/mimetype.gif";s:4:"379f";s:11:"i/minus.gif";s:4:"5f98";s:14:"i/minus_16.gif";s:4:"cfa1";s:19:"i/new_webfolder.gif";s:4:"0ac3";s:10:"i/plus.gif";s:4:"80dd";s:13:"i/plus_16.gif";s:4:"ab3d";s:17:"i/rename_file.gif";s:4:"0a01";s:18:"i/replace_file.gif";s:4:"ae41";s:18:"i/statusfolder.gif";s:4:"efdc";s:16:"i/statustype.gif";s:4:"6fd4";s:12:"i/18/doc.gif";s:4:"0975";s:12:"i/18/dot.gif";s:4:"0975";s:13:"i/18/html.gif";s:4:"f6b2";s:26:"i/18/mtype_application.gif";s:4:"0185";s:20:"i/18/mtype_audio.gif";s:4:"279b";s:25:"i/18/mtype_collection.gif";s:4:"a48d";s:22:"i/18/mtype_dataset.gif";s:4:"4285";s:19:"i/18/mtype_font.gif";s:4:"7afa";s:20:"i/18/mtype_image.gif";s:4:"1d47";s:26:"i/18/mtype_interactive.gif";s:4:"be4d";s:20:"i/18/mtype_model.gif";s:4:"b052";s:22:"i/18/mtype_service.gif";s:4:"0235";s:23:"i/18/mtype_software.gif";s:4:"3e9f";s:19:"i/18/mtype_text.gif";s:4:"6c86";s:24:"i/18/mtype_undefined.gif";s:4:"bf41";s:20:"i/18/mtype_video.gif";s:4:"f848";s:12:"i/18/pdf.gif";s:4:"49a4";s:30:"tests/tx_dam_base_testcase.php";s:4:"190d";s:32:"tests/tx_dam_config_testcase.php";s:4:"e52b";s:28:"tests/tx_dam_db_testcase.php";s:4:"06cc";s:31:"tests/tx_dam_media_testcase.php";s:4:"a8bb";s:34:"tests/fixtures/example-content.txt";s:4:"4e23";s:18:"mod_list/clear.gif";s:4:"cc11";s:17:"mod_list/conf.php";s:4:"ed29";s:18:"mod_list/index.php";s:4:"3c13";s:22:"mod_list/locallang.xml";s:4:"bcbc";s:26:"mod_list/locallang_mod.xml";s:4:"2bc7";s:23:"mod_list/moduleicon.gif";s:4:"adc5";s:62:"modfunc_tools_filerelcheck/class.tx_dam_tools_filerelcheck.php";s:4:"6e16";s:40:"modfunc_tools_filerelcheck/locallang.xml";s:4:"b293";s:19:"mod_tools/clear.gif";s:4:"cc11";s:18:"mod_tools/conf.php";s:4:"114c";s:19:"mod_tools/index.php";s:4:"e1c9";s:23:"mod_tools/locallang.xml";s:4:"74f0";s:27:"mod_tools/locallang_mod.xml";s:4:"1f74";s:24:"mod_tools/moduleicon.gif";s:4:"cce3";s:29:"mod_tools/tx_dam_navframe.php";s:4:"e492";s:50:"modfunc_list_editsel/class.tx_dam_list_editsel.php";s:4:"3b0b";s:34:"modfunc_list_editsel/locallang.xml";s:4:"fac3";s:60:"modfunc_tools_indexupdate/class.tx_dam_tools_indexupdate.php";s:4:"1866";s:39:"modfunc_tools_indexupdate/locallang.xml";s:4:"f877";s:39:"components/class.tx_dam_actionsFile.php";s:4:"a719";s:41:"components/class.tx_dam_actionsFolder.php";s:4:"2aed";s:41:"components/class.tx_dam_actionsRecord.php";s:4:"9021";s:47:"components/class.tx_dam_dbTriggerMediaTypes.php";s:4:"c20e";s:42:"components/class.tx_dam_previewerImage.php";s:4:"c0c2";s:40:"components/class.tx_dam_previewerMP3.php";s:4:"641a";s:45:"components/class.tx_dam_selectionCategory.php";s:4:"c92f";s:43:"components/class.tx_dam_selectionFolder.php";s:4:"cbd6";s:45:"components/class.tx_dam_selectionIndexRun.php";s:4:"662e";s:44:"components/class.tx_dam_selectionMeTypes.php";s:4:"ce31";s:43:"components/class.tx_dam_selectionStatus.php";s:4:"dcbd";s:49:"components/class.tx_dam_selectionStringSearch.php";s:4:"25f2";s:16:"res/emff_inx.swf";s:4:"83f7";s:19:"res/emff_kubrik.swf";s:4:"cb27";s:17:"res/emff_lila.swf";s:4:"f05b";s:16:"res/emff_old.swf";s:4:"360e";s:14:"doc/manual.sxw";s:4:"045f";s:48:"modfunc_file_upload/class.tx_dam_file_upload.php";s:4:"d38a";s:33:"modfunc_file_upload/locallang.xml";s:4:"4bcf";s:37:"modfunc_file_upload/upload_status.php";s:4:"0235";}',
 );
 
 ?>
